--- a/src/asciidoc/index.adoc
+++ b/src/asciidoc/index.adoc
@@ -279,106 +279,30 @@ the pieces of Spring that you need. To make this easier Spring is packaged as a 
 modules that separate the dependencies as much as possible, so for example if you don't
 want to write a web application you don't need the spring-web modules. To refer to
 Spring library modules in this guide we use a shorthand naming convention `spring-*` or
-`spring-*.jar,` where "*" represents the short name for the module (e.g. `spring-core`,
+`spring-*.jar,` where `*` represents the short name for the module (e.g. `spring-core`,
 `spring-webmvc`, `spring-jms`, etc.). The actual jar file name that you use may be in
 this form (see below) or it may not, and normally it also has a version number in the
 file name (e.g. __spring-core-{spring-version}.jar__).
 
-In general, Spring publishes its artifacts to four different places:
+Each release of the Spring Framework will publish artifacts to the following places:
 
-* On the community download site
-  http://www.springsource.org/download/community[http://www.springsource.org/download/community].
-  Here you find all the Spring jars bundled together into a zip file for easy download.
-  The names of the jars here since version 3.0 are in the form
-  `org.springframework.*-<version>.jar`.
 * Maven Central, which is the default repository that Maven queries, and does not
   require any special configuration to use. Many of the common libraries that Spring
   depends on also are available from Maven Central and a large section of the Spring
   community uses Maven for dependency management, so this is convenient for them. The
   names of the jars here are in the form `spring-*-<version>.jar` and the Maven groupId
   is `org.springframework`.
-* The Enterprise Bundle Repository (EBR), which is run by SpringSource and also hosts
-  all the libraries that integrate with Spring. Both Maven and Ivy repositories are
-  available here for all Spring jars and their dependencies, plus a large number of
-  other common libraries that people use in applications with Spring. Both full releases
-  and also milestones and development snapshots are deployed here. The names of the jar
-  files are in the same form as the community download (
-  `org.springframework.*-<version>.jar`), and the dependencies are also in this "long"
-  form, with external libraries (not from SpringSource) having the prefix
-  `com.springsource`. See the http://ebr.springsource.com/repository/app/faq[FAQ] for
-  more information.
-* In a public Maven repository hosted on Amazon S3 for development snapshots and
-  milestone releases (a copy of the final releases is also held here). The jar file
-  names are in the same form as Maven Central, so this is a useful place to get
+* In a public Maven repository hosted specifically for Spring. In addition to the final
+  GA releases, this repository also hosts development snapshots and milestones. The jar
+  file names are in the same form as Maven Central, so this is a useful place to get
   development versions of Spring to use with other libraries deployed in Maven Central.
+  This repository also contains a bundle distribution zip file that contains the Spring
+  jars  bundled together for easy download.
 
-So the first thing you need to decide is how to manage your dependencies: most people
-use an automated system like Maven or Ivy, but you can also do it manually by
-downloading all the jars yourself. When obtaining Spring with Maven or Ivy you have then
-to decide which place you'll get it from. In general, if you care about OSGi, use the
-EBR, since it houses OSGi compatible artifacts for all of Spring's dependencies, such as
-Hibernate and Freemarker. If OSGi does not matter to you, either place works, though
-there are some pros and cons between them. In general, pick one place or the other for
-your project; do not mix them. This is particularly important since EBR artifacts
-necessarily use a different naming convention than Maven Central artifacts.
-
-[[dependency-comparison-of-maven-central-and-ebr-tbl]]
-.Comparison of Maven Central and SpringSource EBR Repositories
-|===
-| Feature| Maven Central| EBR
-
-| OSGi Compatible
-| Not explicit
-| Yes
-
-| Number of Artifacts
-| Tens of thousands; all kinds
-| Hundreds; those that Spring integrates with
-
-| Consistent Naming Conventions
-| No
-| Yes
-
-| Naming Convention: GroupId
-| Varies. Newer artifacts often use domain name, e.g. org.slf4j. Older ones often just
-  use the artifact name, e.g. log4j.
-| Domain name of origin or main package root, e.g. org.springframework
-
-| Naming Convention: ArtifactId
-| Varies. Generally the project or module name, using a hyphen "-" separator, e.g.
-  spring-core, logj4.
-| Bundle Symbolic Name, derived from the main package root, e.g.
-  org.springframework.beans. If the jar had to be patched to ensure OSGi compliance then
-  com.springsource is appended, e.g. com.springsource.org.apache.log4j
-
-| Naming Convention: Version
-| Varies. Many new artifacts use m.m.m or m.m.m.X (with m=digit, X=text). Older ones use
-  m.m. Some neither. Ordering is defined but not often relied on, so not strictly
-  reliable.
-| OSGi version number m.m.m.X, e.g. 3.0.0.RC3. The text qualifier imposes alphabetic
-  ordering on versions with the same numeric values.
-
-| Publishing
-| Usually automatic via rsync or source control updates. Project authors can upload
-  individual jars to JIRA.
-| Manual (JIRA processed by SpringSource)
-
-| Quality Assurance
-| By policy. Accuracy is responsibility of authors.
-| Extensive for OSGi manifest, Maven POM and Ivy metadata. QA performed by Spring team.
-
-| Hosting
-| Contegix. Funded by Sonatype with several mirrors.
-| S3 funded by SpringSource.
-
-| Search Utilities
-| Various
-| http://ebr.springsource.com/repository/app/[http://ebr.springsource.com/repository/app/]
-
-| Integration with SpringSource Tools
-| Integration through STS with Maven dependency management
-| Extensive integration through STS with Maven, Roo, CloudFoundry
-|===
+So the first thing you need to decide is how to manage your dependencies: we generally
+recommend the use of an automated system like Maven, Gradle or Ivy, but you can also do
+it manually by downloading all the jars yourself. We provide detailed instructions later
+in this chapter.
 
 
 [[overview-spring-dependencies]]
@@ -391,18 +315,18 @@ injection there is only one mandatory external dependency, and that is for loggi
 below for a more detailed description of logging options).
 
 Next we outline the basic steps needed to configure an application that depends on
-Spring, first with Maven and then with Ivy. In all cases, if anything is unclear, refer
-to the documentation of your dependency management system, or look at some sample code -
-Spring itself uses Ivy to manage dependencies when it is building, and our samples
-mostly use Maven.
+Spring, first with Maven and then with Gradle and finally using Ivy. In all cases, if
+anything is unclear, refer to the documentation of your dependency management system, or
+look at some sample code - Spring itself uses Gradle to manage dependencies when it is
+building, and our samples mostly use Gradle or Maven.
 
 
 [[overview-maven-dependency-management]]
 ===== Maven Dependency Management
-If you are using Maven for dependency management you don't even need to supply the
-logging dependency explicitly. For example, to create an application context and use
-dependency injection to configure an application, your Maven dependencies will look like
-this:
+If you are using http://maven.apache.org/[Maven] for dependency management you don't even
+need to supply the logging dependency explicitly. For example, to create an application
+context and use dependency injection to configure an application, your Maven dependencies
+will look like this:
 
 [source,xml,indent=0]
 [subs="verbatim,quotes,attributes"]
@@ -421,10 +345,9 @@ That's it. Note the scope can be declared as runtime if you don't need to compil
 against Spring APIs, which is typically the case for basic dependency injection use
 cases.
 
-We used the Maven Central naming conventions in the example above, so that works with
-Maven Central or the SpringSource Maven repository. To use the Spring Maven repository
-(e.g. for milestones or developer snapshots), you need to specify the repository
-location in your Maven configuration. For full releases:
+The example above works with the Maven Central repository. To use the Spring Maven
+repository (e.g. for milestones or developer snapshots), you need to specify the
+repository location in your Maven configuration. For full releases:
 
 [source,xml,indent=0]
 [subs="verbatim,quotes"]
@@ -432,7 +355,7 @@ location in your Maven configuration. For full releases:
 	<repositories>
 		<repository>
 			<id>io.spring.repo.maven.release</id>
-			<url>https://repo.spring.io/release/</url>
+			<url>http://repo.spring.io/release/</url>
 			<snapshots><enabled>false</enabled></snapshots>
 		</repository>
 	</repositories>
@@ -446,7 +369,7 @@ For milestones:
 	<repositories>
 		<repository>
 			<id>io.spring.repo.maven.milestone</id>
-			<url>https://repo.spring.io/milestone/</url>
+			<url>http://repo.spring.io/milestone/</url>
 			<snapshots><enabled>false</enabled></snapshots>
 		</repository>
 	</repositories>
@@ -460,14 +383,43 @@ And for snapshots:
 	<repositories>
 		<repository>
 			<id>io.spring.repo.maven.snapshot</id>
-			<url>https://repo.spring.io/snapshot/</url>
+			<url>http://repo.spring.io/snapshot/</url>
 			<snapshots><enabled>true</enabled></snapshots>
 		</repository>
 	</repositories>
 ----
 
-To use the SpringSource EBR you would need to use a different naming convention for the
-dependencies. The names are usually easy to guess, e.g. in this case it is:
+
+[[overview-maven-bom]]
+===== Maven "Bill Of Materials" Dependency =====
+It is possible to accidentally mix different versions of Spring JARs when using Maven.
+For example, you may find that that a third-party library, or another Spring project,
+pulls in a transitive dependency to an older release. If you forget to explicitly declare
+a direct dependency yourself, all sorts of unexpected issues can arise.
+
+To overcome such problems Maven supports the concept of "bill of materials" (BOM)
+dependency. You can import the `spring-framework-bom` in your `dependencyManagement`
+section to ensure that all spring dependencies (both direct and transitive) are at
+the same version.
+
+[source,xml,indent=0]
+[subs="verbatim,quotes,attributes"]
+----
+	<dependencyManagement>
+		<dependencies>
+			<dependency>
+				<groupId>org.springframework</groupId>
+				<artifactId>spring-framework-bom</artifactId>
+				<version>{spring-version}</version>
+				<type>pom</type>
+				<scope>import</scope>
+			</dependency>
+		</dependencies>
+	</dependencyManagement>
+----
+
+An added benefit of using the BOM is that you no longer need to specify the `<version>`
+attribute when depending on Spring Framework artifacts:
 
 [source,xml,indent=0]
 [subs="verbatim,quotes,attributes"]
@@ -475,87 +427,101 @@ dependencies. The names are usually easy to guess, e.g. in this case it is:
 	<dependencies>
 		<dependency>
 			<groupId>org.springframework</groupId>
-			<artifactId>org.springframework.context</artifactId>
-			<version>{spring-version}</version>
-			<scope>runtime</scope>
+			<artifactId>spring-context</artifactId>
 		</dependency>
-	</dependencies>
+		<dependency>
+			<groupId>org.springframework</groupId>
+			<artifactId>spring-web</artifactId>
+		</dependency>
+	<dependencies>
 ----
 
-You also need to declare the location of the repository explicitly (only the URL is
-important):
 
-[source,xml,indent=0]
+[[overview-gradle-dependency-management]]
+===== Gradle Dependency Management
+To use the Spring repository with the http://www.gradle.org/[Gradle] build system,
+include the appropriate URL in the `repositories` section:
+
+[source,groovy,indent=0]
 [subs="verbatim,quotes"]
 ----
-	<repositories>
-		<repository>
-			<id>com.springsource.repository.bundles.release</id>
-			<url>http://repository.springsource.com/maven/bundles/release/</url>
-		</repository>
-	</repositories>
+	repositories {
+		mavenCentral()
+		maven { url "http://repo.spring.io/release" }
+	}
 ----
 
-If you are managing your dependencies by hand, the URL in the repository declaration
-above is not browsable, but there is a user interface at
-http://ebr.springsource.com/repository/app/[http://ebr.springsource.com/repository/app/]
-that can be used to search for and download dependencies. It also has handy snippets of
-Maven and Ivy configuration that you can copy and paste if you are using those tools.
+You can change the `repositories` URL from `/release` to `/milestone` or `/snapshot` as
+appropriate. Once a repository has been configured, you can declare dependencies in the
+usual Gradle way:
+
+[source,groovy,indent=0]
+[subs="verbatim,quotes,attributes"]
+----
+	dependencies {
+		compile("org.springframework:spring-context:{spring-version}")
+		testCompile("org.springframework:spring-context:{spring-test}")
+	}
+----
 
 
 [[overview-ivy-dependency-management]]
 ===== Ivy Dependency Management
 If you prefer to use http://ant.apache.org/ivy[Ivy] to manage dependencies then there
-are similar names and configuration options.
+are similar configuration options.
 
-To configure Ivy to point to the SpringSource EBR add the following resolvers to your
+To configure Ivy to point to the Spring repository add the following resolver to your
 `ivysettings.xml`:
 
 [source,xml,indent=0]
 [subs="verbatim,quotes"]
 ----
 	<resolvers>
-		<url name="com.springsource.repository.bundles.release">
-			<ivy pattern="http://repository.springsource.com/ivy/bundles/release/
-				[organisation]/[module]/[revision]/[artifact]-[revision].[ext]" />
-			<artifact pattern="http://repository.springsource.com/ivy/bundles/release/
-				[organisation]/[module]/[revision]/[artifact]-[revision].[ext]" />
-		</url>
-
-		<url name="com.springsource.repository.bundles.external">
-			<ivy pattern="http://repository.springsource.com/ivy/bundles/external/
-				[organisation]/[module]/[revision]/[artifact]-[revision].[ext]" />
-			<artifact pattern="http://repository.springsource.com/ivy/bundles/external/
-				[organisation]/[module]/[revision]/[artifact]-[revision].[ext]" />
-		</url>
+		<ibiblio name="io.spring.repo.maven.release"
+				m2compatible="true"
+				root="http://repo.spring.io/release/"/>
 	</resolvers>
 ----
 
-The XML above is not valid because the lines are too long - if you copy-paste then
-remove the extra line endings in the middle of the url patterns.
+You can change the `root` URL from `/release/` to `/milestone/` or `/snapshot/` as
+appropriate.
 
-Once Ivy is configured to look in the EBR adding a dependency is easy. Simply pull up
-the details page for the bundle in question in the repository browser and you'll find an
-Ivy snippet ready for you to include in your dependencies section. For example (in
-`ivy.xml`):
+Once configured, you can add dependencies in the usual way. For example (in `ivy.xml`):
 
 [source,xml,indent=0]
 [subs="verbatim,quotes,attributes"]
 ----
 	<dependency org="org.springframework"
-		name="org.springframework.core" rev="{spring-version}" conf="compile->runtime"/>
+		name="spring-core" rev="{spring-version}" conf="compile->runtime"/>
 ----
+
+
+[[overview-distribution-zip]]
+===== Distribution Zip Files
+Although using a build system that supports dependency management is the recommended
+way to obtain the Spring Framework, it is still possible to download a distribution
+zip file.
+
+Distribution zips are published to the Spring Maven Repository (this is just for our
+convenience, you don't need Maven or any other build system in order to download them).
+
+To download a distribution zip open a web browser at
+http://repo.spring.io/release/org/springframework/spring and select the appropriate
+subfolder for the version that you want. Distribution files end `-dist.zip`, for example
++spring-framework-{spring-version}-RELEASE-dist.zip+. Distributions are also published
+for http://repo.spring.io/milestone/org/springframework/spring[milestones] and
+http://repo.spring.io/snapshot/org/springframework/spring[snapshots].
 
 
 
 [[overview-logging]]
 ==== Logging
-Logging is a very important dependency for Spring because a) it is the only mandatory
-external dependency, b) everyone likes to see some output from the tools they are using,
-and c) Spring integrates with lots of other tools all of which have also made a choice
-of logging dependency. One of the goals of an application developer is often to have
-unified logging configured in a central place for the whole application, including all
-external components. This is more difficult than it might have been since there are so
+Logging is a very important dependency for Spring because __a)__ it is the only mandatory
+external dependency, __b)__ everyone likes to see some output from the tools they are
+using, and __c)__ Spring integrates with lots of other tools all of which have also made
+a choice of logging dependency. One of the goals of an application developer is often to
+have unified logging configured in a central place for the whole application, including
+all external components. This is more difficult than it might have been since there are so
 many choices of logging framework.
 
 The mandatory logging dependency in Spring is the Jakarta Commons Logging API (JCL). We
@@ -7245,9 +7211,9 @@ datasource from JNDI when in QA or production
 performance environment
 * registering customized implementations of beans for customer A vs. customer B deployments
 
-Find out more about https://spring.io/blog/2011/02/11/spring-framework-3-1-m1-released/[Environment,
+Find out more about http://spring.io/blog/2011/02/11/spring-framework-3-1-m1-released/[Environment,
 XML Profiles] and the
-https://spring.io/blog/2011/02/14/spring-3-1-m1-introducing-profile/[@Profile annotation].
+http://spring.io/blog/2011/02/14/spring-3-1-m1-introducing-profile/[@Profile annotation].
 
 
 [[beans-property-source-abstraction]]
@@ -7257,7 +7223,7 @@ Spring's <<beans-definition-profiles,Environment abstraction>> provides search o
 over a configurable hierarchy of property sources.
 
 You can find out more about
-https://spring.io/blog/2011/02/15/spring-3-1-m1-unified-property-management/[Unified
+http://spring.io/blog/2011/02/15/spring-3-1-m1-unified-property-management/[Unified
 Property Management], the
 {javadoc-baseurl}/org/springframework/core/env/PropertySource.html[PropertySource class]
 and the {javadoc-baseurl}org/springframework/context/annotation/PropertySource.html[@PropertySource
